fix: review swagger
