# api/docs/swagger.json
@@ -28,8 +28,8 @@
                 "summary": "Add a new namespace",
                 "parameters": [
                     {
-                        "description": "Namespace",
-                        "name": "namespace",
+                        "description": "Name",
+                        "name": "name",
                         "in": "body",
                         "required": true,
                         "schema": {
